# calendar-extractor

./: .env.example  .gitignore  CalendarExtract.py  README.md  init.sh  pyproject.toml  requirements.txt
