[project]
name = "calendar-extractor"
version = "1.0.0"
description = "A script to extract calendar data from an Outlook for Mac archive and format it for use in an Excel Sheet."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv",
    "pandas",
    "openpyxl",
    "bs4",
    "python-dateutil",
    "colorama>=0.4.6",
]
